# gpu_runtime

./: .gitmodules  CMakeLists.txt  README.md
app/example_compute_kernel/: CMakeLists.txt  main.cpp  result.hpp
app/example_compute_kernel/runners/: cuda_runner.cpp  cuda_runner.hpp  lib_loader.hpp  metal_runner.hpp  metal_runner.mm  metal_runner_stub.cpp  oneapi_runner.cpp  oneapi_runner.hpp  opencl_runner.cpp  opencl_runner.hpp  rocm_runner.cpp  rocm_runner.hpp  vulkan_runner.cpp  vulkan_runner.hpp
app/example_compute_kernel/shaders/: .gitignore  vector_add.spv.inl
app/example_compute_kernel_vendor_specific/: CMakeLists.txt  main.cpp  result.hpp  timings.hpp
app/example_compute_kernel_vendor_specific/runners/cuda/: CMakeLists.txt  cuda_runner.cu  cuda_runner.hpp
app/example_compute_kernel_vendor_specific/runners/metal/: CMakeLists.txt  metal_runner.hpp  metal_runner.mm
app/example_compute_kernel_vendor_specific/runners/oneapi/: CMakeLists.txt  oneapi_runner.cpp  oneapi_runner.hpp
app/example_compute_kernel_vendor_specific/runners/opencl/: CMakeLists.txt  opencl_runner.cpp  opencl_runner.hpp
app/example_compute_kernel_vendor_specific/runners/rocm/: CMakeLists.txt  rocm_runner.hip  rocm_runner.hpp
app/example_compute_kernel_vendor_specific/runners/vulkan/: CMakeLists.txt  vulkan_runner.cpp  vulkan_runner.hpp
app/example_compute_kernel_vendor_specific/shaders/: CMakeLists.txt  vector_add.comp
app/example_compute_kernel_vendor_specific/shaders/cmake/: embed_spirv.cmake
src/: preference.cpp
src/backends/: calling_convention.hpp  cuda.cpp  oneapi.cpp  opencl.cpp  vulkan.cpp
